pfe-cta-fix-functions, WIP fixing wrapping arrow

--- a/elements/pfe-cta/demo/demo.css
+++ b/elements/pfe-cta/demo/demo.css
@@ -32,7 +32,7 @@
   }
 
   .force-wrap {
-      max-width: 100px;
+      max-width: 215px;
   }
 
   .card-layout {
