--- a/elements/pfe-cta/src/pfe-cta.scss
+++ b/elements/pfe-cta/src/pfe-cta.scss
@@ -9,86 +9,96 @@ $pfe-cta--Color--fallback: #003366;
   // regular variables
   --pfe-cta--BorderRadius: 0;
   --pfe-cta__arrow--Display:  inline;
-  --pfe-cta__arrow--Padding:  0 .125rem 0 .375rem;
+  --pfe-cta__arrow--Padding:  8px;
   --pfe-cta--BackgroundColor:         transparent;
   --pfe-cta--BackgroundColor--focus:  transparent;
   --pfe-cta--SecondaryBackgroundColor--focus: rgba(21,21,21, .05);
   --pfe-cta--BorderColor:             transparent;
   --pfe-cta__inner--BorderColor:      transparent;
-  --pfe-cta--Color:   pfe-color(ui-link);
+  --pfe-cta--Color:   #{pfe-color(ui-link)};
   --pfe-cta--Padding: .6rem 0;
+
+
 
   // hover variables
   --pfe-cta--BackgroundColor--hover:  transparent;
   --pfe-cta--BorderColor--hover: transparent;
-  --pfe-cta--Color--hover:  pfe-color(ui-link--hover);
+  --pfe-cta--Color--hover:  #{pfe-color(ui-link--hover)};
 
   // focus variables
   --pfe-cta--BorderColor--focus: transparent;
   --pfe-cta__inner--BorderColor--focus: transparent;
-  --pfe-cta--Color--focus:  pfe-color(ui-link--focus);
+  --pfe-cta--Color--focus:  #{pfe-color(ui-link--focus)};
 
   // properties
   display: inline-block;
-  font-family: pfe-var(font-family--heading);
-  font-size:   pfe-var(font-size);
-  font-weight: pfe-var(font-weight--bold);
-  line-height: pfe-var(line-height);
-  background-color: pfe-local(BackgroundColor);
-  border-color:     pfe-local(BorderColor);
+  font-family: #{pfe-var(font-family--heading)};
+  font-size:   #{pfe-var(font-size)};
+  font-weight: #{pfe-var(font-weight--bold)};
+  line-height: #{pfe-var(line-height)};
+  background-color: #{pfe-local(BackgroundColor)};
+  border-color:     #{pfe-local(BorderColor)};
   position: relative;
-  transition: .3s ease padding; // padding pfe-var(animation-timing);
+  transition: .3s ease padding; // padding #{pfe-var(animation-timing)};
   line-height: inherit;
   vertical-align:  middle;
-  background-color: pfe-local(BackgroundColor);
-  border-radius:    pfe-local(BorderRadius);
-  border:           pfe-var(ui--border-width) pfe-var(ui--border-style) pfe-local(BorderColor);
+  background-color: #{pfe-local(BackgroundColor)};
+  border-radius:    #{pfe-local(BorderRadius)};
+  border:           #{pfe-var(ui--border-width)} #{pfe-var(ui--border-style)} #{pfe-local(BorderColor)};
 
+  //  --pfe-cta__arrow--Padding:  0 .125rem 0 .375rem;
+  //calc( #{pfe-local($cssvar: Padding, $region: arrow)}
   .pfe-cta--arrow {
-    display: pfe-local($cssvar: arrow--Display, $region: arrow);
-    padding: pfe-local($cssvar: Padding, $region: arrow);
+    display: #{pfe-local($cssvar: arrow--Display, $region: arrow)};
+    padding: 0;
+    padding-right: calc( 13px + #{var(--pfe-cta__arrow--Padding)} );
+    margin-right:  calc( -13px - #{var(--pfe-cta__arrow--Padding)} );
     fill: #{pfe-local(Color)};
     position: relative;
     top: .1rem; 
     width: 13px;
     height: 13px;
-    transition: .3s ease padding;
+    transition: .3s ease padding, .3s ease margin; // padding #{pfe-var(animation-timing)};
   }
 }
 
 :host(::after) {
-  margin-left:        calc(#{pfe-var(content-spacer)} * 0.25); // 1/4 of the base `content-spacer`
+  margin-left:      calc(#{pfe-var(content-spacer)} * 0.25); // 1/4 of the base `content-spacer`
 }
 
+//  --pfe-cta__arrow--Padding:  0 .125rem 0 .375rem;
 :host(:hover) {
-  --pfe-cta__arrow--Padding: 0 0 0 .5rem;
-  background-color: pfe-local(BackgroundColor--hover);
-  border-color:     pfe-local(BorderColor--hover);
+  //--pfe-cta__arrow--Padding: 0;
+
+  background-color: #{pfe-local(BackgroundColor--hover)};
+  border-color:     #{pfe-local(BorderColor--hover)};
   cursor:           pointer;
 
   ::slotted(*) {
-    color: pfe-local(Color--hover) !important; // because of redhat-theme styles on links
+    color: #{pfe-local(Color--hover)} !important; // because of redhat-theme styles on links
     &::before  {
       border: 1px solid pfe-local($cssvar: BorderColor--hover, $region: inner);
     }
   }
 
   .pfe-cta--arrow {
+    padding-right: calc( 13px + #{var(--pfe-cta__arrow--Padding)} + 2px);
+    margin-right:  calc( -13px - #{var(--pfe-cta__arrow--Padding)} + 2px);
     fill: pfe-local(Color--hover);
   }
 }
 
 :host(.focus-within) {
   outline: none !important;
-  background-color: pfe-local(BackgroundColor--focus);
-  border-color:     pfe-local(BorderColor--focus);
+  background-color: #{pfe-local(BackgroundColor--focus)};
+  border-color:     #{pfe-local(BorderColor--focus)};
 
   ::slotted(*) {
-    color: pfe-local(Color--focus) !important; // because of redhat-theme styles on links
+    color: #{pfe-local(Color--focus)} !important; // because of redhat-theme styles on links
   }
 
   .pfe-cta--arrow {
-    fill:           pfe-local(Color--focus);
+    fill:           #{pfe-local(Color--focus)};
   }
 }
 
@@ -108,13 +118,13 @@ $pfe-cta--Color--fallback: #003366;
 
 ::slotted(*) {
   display: inline;
-  color: pfe-local(Color, $pfe-cta--Color--fallback) !important;  // because of redhat-theme styles on links
+  color: #{pfe-local(Color, $pfe-cta--Color--fallback)} !important;  // because of redhat-theme styles on links
   text-decoration: none;
   &::before {  // inner border on priority CTAs
     content: "";
     display: block;
     box-sizing: border-box;
-    border: 1px solid var(--pfe-cta__inner--BorderColor);
+    border: 1px solid transparent;
     outline: none;
     position: absolute;
     top: 2px;
@@ -126,19 +136,19 @@ $pfe-cta--Color--fallback: #003366;
 }
 
 ::slotted(:hover) {
-    color: pfe-local(Color--hover) !important; // @WHY redhat-theme styles on links
+    color: #{pfe-local(Color--hover)} !important; // @WHY redhat-theme styles on links
 }
 
 ::slotted(:focus) {
   outline: none !important;
-  color: pfe-local(Color--focus) !important;  // @WHY redhat-theme styles on links
+  color: #{pfe-local(Color--focus)} !important;  // @WHY redhat-theme styles on links
 
   &::before {
     border: 1px solid #{pfe-local($cssvar: BorderColor--focus, $region: inner)};
   }
 
   .pfe-cta--arrow {
-    fill: pfe-local(Color--focus);
+    fill: #{pfe-local(Color--focus)};
   }
 }
 
